// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`MFT refetch query with Location as node 1`] = `
{
  "node": {
    "__typename": "Location",
    "name": {
      "__typename": "Name",
      "value": "Mixing Line",
    },
    "tracking": {
      "edges": [
        {
          "node": {
            "displayName": {
              "name": {
                "value": "Production",
              },
            },
            "fsm": {
              "active": null,
              "transitions": {
                "edges": [
                  {
                    "node": {
                      "displayName": {
                        "name": {
                          "value": "Production",
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      ],
    },
  },
}
`;

exports[`MFT refetch query with Task as node 1`] = `
{
  "node": {
    "__typename": "Task",
    "displayName": {
      "__typename": "DisplayName",
      "name": {
        "__typename": "DynamicString",
        "value": "Production",
      },
    },
    "fsm": {
      "active": null,
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Production",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`MFT transition mutations lazy instantiation of the root 1`] = `
{
  "transition": {
    "__typename": "Task",
    "displayName": {
      "__typename": "DisplayName",
      "name": {
        "__typename": "DynamicString",
        "value": "Production",
      },
    },
    "fsm": {
      "active": {
        "displayName": {
          "name": {
            "value": "Production",
          },
        },
      },
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Unplanned Downtime",
                },
              },
            },
          },
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Planned Downtime",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`MFT transition mutations between active states 1`] = `
{
  "transition": {
    "__typename": "Task",
    "displayName": {
      "__typename": "DisplayName",
      "name": {
        "__typename": "DynamicString",
        "value": "Production",
      },
    },
    "fsm": {
      "active": {
        "displayName": {
          "name": {
            "value": "Production",
          },
        },
      },
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Unplanned Downtime",
                },
              },
            },
          },
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Planned Downtime",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;
